--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,280 +1,11 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("/src/fonts/Roboto-Light.woff2");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("/src/fonts/Roboto-Bold.woff2");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
+@import "abstracts/variables";
 
-// color vars
-$dark: hsla(0, 0%, 7%, 1);
-$dark-translucent: hsla(0, 0%, 7%, 0.5);
-$primary: hsla(21, 50%, 79%, 1);
-$white: hsla(0, 0%, 100%, 1);
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
 
-// font vars
-$paragraph: 700 42px/50px "Roboto", sans-serif;
-$paragraph-sm: 700 25px/30px "Roboto", sans-serif;
+@import "components/button";
+@import "components/loader";
+@import "components/popup";
 
-// indent vars
-$paragraph-indent: 24px;
-$paragraph-indent-sm: 15px;
-
-// default styles for all elements
-* {
-  padding: 0;
-  margin: 0;
-  color: $dark;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  -webkit-tap-highlight-color: hsla(0, 0%, 0%, 1);
-  -webkit-tap-highlight-color: transparent;
-}
-
-// some default styles
-img {
-  display: block;
-}
-html {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  scroll-behavior: smooth;
-}
-button {
-  border: 1px solid transparent;
-  cursor: pointer;
-  transition: 0.3s;
-  background: none;
-
-  &.primary-btn {
-    font-weight: 700;
-    line-height: 16px;
-    color: $white;
-    background: $primary;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 16px 40px;
-    border-radius: 32px;
-
-    &:hover {
-      background: transparent;
-      color: $primary;
-      border-color: $primary;
-    }
-  }
-}
-.wrapper {
-  width: 100%;
-  max-width: 1440px;
-  margin: 0 auto;
-}
-.paragraph {
-  font: $paragraph;
-  margin-bottom: $paragraph-indent;
-}
-.text {
-  font-weight: 300;
-}
-table,
-td,
-th {
-  border-collapse: collapse;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  padding: 10px;
-  border: 1px solid $dark;
-}
-.loader {
-  display: flex;
-  animation: animate 1.5s linear infinite;
-  clip: rect(0, 80px, 80px, 40px);
-  height: 80px;
-  width: 80px;
-  position: absolute;
-  left: calc(50% - 40px);
-  top: calc(50% - 40px);
-}
-@keyframes animate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(220deg);
-  }
-}
-.loader:after {
-  animation: animate2 1.5s ease-in-out infinite;
-  clip: rect(0, 80px, 80px, 40px);
-  content: "";
-  border-radius: 50%;
-  height: 80px;
-  width: 80px;
-  position: absolute;
-}
-@keyframes animate2 {
-  0% {
-    box-shadow: inset $primary 0 0 0 17px;
-    transform: rotate(-140deg);
-  }
-  50% {
-    box-shadow: inset $primary 0 0 0 2px;
-  }
-  100% {
-    box-shadow: inset $primary 0 0 0 17px;
-    transform: rotate(140deg);
-  }
-}
-// main styles
-.first-section {
-  margin-top: 96px;
-
-  .box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    column-gap: 95px;
-
-    img {
-      width: 100%;
-      max-width: 505px;
-      height: 330px;
-      object-fit: cover;
-    }
-
-    .text-box {
-      max-width: 380px;
-
-      p {
-        margin-bottom: 32px;
-      }
-    }
-  }
-}
-.window-background {
-  display: none;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: $dark-translucent;
-  z-index: 10;
-
-  .window-body {
-    width: 100%;
-    max-width: 920px;
-    background: $white;
-    padding: 56px 95px;
-    position: relative;
-    max-height: 500px;
-    overflow-y: scroll;
-
-    .window-title {
-      margin-bottom: $paragraph-indent;
-
-      button {
-        width: 24px;
-        height: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        top: 40px;
-        right: 40px;
-
-        svg path {
-          transition: 0.3s;
-        }
-        &:hover svg path {
-          stroke: $primary;
-        }
-      }
-    }
-    .window-content {
-      p {
-        font-weight: 300;
-
-        span {
-          font-weight: 700;
-        }
-      }
-      button {
-        display: none;
-        margin: $paragraph-indent 0;
-      }
-      .additional-task {
-        margin-top: $paragraph-indent;
-      }
-    }
-  }
-}
-@media screen and (max-width: 1224px) {
-  .wrapper {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .window-background {
-    padding: 50px 20px;
-  }
-}
-@media screen and (max-width: 1019px) {
-  .first-section .box {
-    img {
-      margin-bottom: $paragraph-indent-sm;
-    }
-    .text-box {
-      max-width: 505px;
-    }
-  }
-}
-@media screen and (max-width: 578px) {
-  .wrapper {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .paragraph {
-    font: $paragraph-sm;
-    margin-bottom: $paragraph-indent-sm;
-  }
-  .first-section .box .text-box {
-    p {
-      margin-bottom: 25px;
-    }
-  }
-  .window-background {
-    padding: 50px 10px;
-
-    .window-body {
-      padding: 25px;
-
-      .window-title {
-        margin-bottom: $paragraph-indent-sm;
-
-        h2 {
-          margin-bottom: 0;
-        }
-        button {
-          top: 20px;
-          right: 20px;
-        }
-      }
-      .window-content button {
-        margin-top: $paragraph-indent-sm 0;
-      }
-    }
-  }
-}
+@import "pages/home";
