--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "Roboto";
-  src: url("/src/fonts/Roboto-Light.woff2");
+  src: url("./src/fonts/Roboto-Light.woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Roboto";
-  src: url("/src/fonts/Roboto-Bold.woff2");
+  src: url("./src/fonts/Roboto-Bold.woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
